--- a/src/config.json
+++ b/src/config.json
@@ -8,7 +8,8 @@
         "allowedOrigins": [
           "https://localhost",
           "http://localhost:7080"
-        ]
+        ],
+        "jwtSecret": "my-very-secret-key"
       }
     },
     {
